Write the title

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>Hello Microverse</title>
 </head>
 <body>
-  
+  <main>
+    <h1 class="title">Hello Micorverse!</h1>
+  </main>
 </body>
 </html>
